--- a/package.json
+++ b/package.json
@@ -42,20 +42,27 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.18.1",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.515.0",
     "next": "15.3.3",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
+    "react-resizable-panels": "^3.0.3",
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "three": "^0.177.0",
+    "vaul": "^1.1.2",
     "zod": "^3.25.64"
   },
   "devDependencies": {
