--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.3",
     "react-router-dom": "^7.6.2",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
