--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
+    "react-loader-spinner": "^6.1.6",
     "react-resizable-panels": "^3.0.3",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
