--- a/package.json
+++ b/package.json
@@ -50,13 +50,13 @@
     "lucide-react": "^0.515.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-loader-spinner": "^6.1.6",
     "react-day-picker": "^9.7.0",
-    "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
-    "react-loader-spinner": "^6.1.6",
     "react-resizable-panels": "^3.0.3",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
